<resources>

    <!-- Início - Não traduzir  -->
    <string name="item_categoria">CATEGORIA</string>
    <string name="item_format">ITEM/%s</string>
    <string name="pedidos">PEDIDOS/</string>
    <!-- Fim - Não traduzir  -->

    <string name="app_name">Mself</string>
    <string name="cardapio">Cardápio</string>
    <string name="moeda">R$ %s</string>
    <string name="descricao">Descrição</string>
    <string name="preco">R$ 0.00</string>
    <string name="titulo">Titulo</string>
    <string name="pedir">Pedir</string>
    <string name="title_activity_cardapio">Cardápio</string>
    <string name="carrinho">Carrinho</string>
    <string name="erro_banco_aviso">Erro na conexão. Tente novamente depois</string>
    <string name="zero">0</string>
    <string name="historico">Historico</string>
    <string name="configuracoes">Configurações</string>
    <string name="adicionar_ao_pedido">Adicionar ao pedido</string>
    <string name="adicionar_observacoes">Adicionar observações</string>
    <string name="observacoes">Observações</string>
    <string name="observacoes_ex">Observações. Ex: Tirar cebola, maionese à parte, etc.</string>
    <string name="quantidade">Quantidade</string>

    <string-array name="detalhes_quantidade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="itemPedido">itemPedido</string>
    <string name="itemCardapio">itemCardapio</string>
    <string name="title_activity_carrinho">Pedidos não enviados</string>
    <string name="carrinho_concluir_pedido">Concluir pedido %3.2f</string>
    <string name="carrinho_preco_item">Preço: R$ %3.2f</string>
    <string name="carrinho_quantidade">Quantidade: %d</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Mself</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="detalhes_item_salvo">Item incluído no seu pedido!</string>
    <string name="detalhes_observacoes_ok">Observações incluídas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leitura_info">Escaneie o código impresso no adesivo em um dos cantos da mesa</string>
    <string name="aviso_erro">Houve um erro não esperado. Entre em contato com nossa central de atendimento</string>
    <string name="carrinho_escaneie_codigo_mesa">Escaneie o código da mesa antes de concluir o pedido</string>
    <string name="carrinho_escaneado_codigo_mesa">Pedido para a mesa %s</string>
    <string name="detalhes_quantidade">Quantidade</string>
    <string name="detalhes_observacoes">Observações</string>
    <string name="detalhes_total_pedido">Total do pedido R$</string>
    <string name="detalhes_total_pedido_valor">0.0</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_acompanhar_pedidos">Acompanhar Pedidos</string>
    <string name="menu_comidas">Comidas</string>
    <string name="menu_pratos_executivos">Pratos executivos</string>
    <string name="menu_peixes_e_frutos_do_mar">Peixes e frutos do mar</string>
    <string name="menu_carnes">Carnes</string>
    <string name="menu_saladas">Saladas</string>
    <string name="menu_lanches_petiscos_e_sobremesas">Lanches, petiscos e sobremesas</string>
    <string name="menu_sanduiches">Sanduiches</string>
    <string name="menu_petiscos">Petiscos</string>
    <string name="menu_sobremesas">Sobremesas</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="menu_refrigerantes">Refrigerantes</string>
    <string name="menu_cervejas">Cervejas</string>
    <string name="menu_vinhos">Vinhos</string>
    <string name="menu_doses">Doses</string>
    <string name="carrinho_confirmar_pedido_botao">Confirmar pedido para a mesa %s</string>
    <string name="carrinho_escaneamento_cancelado">Escaneamento cancelado</string>
    <string name="carrinho_codigo_mesa">Código da mesa: %s</string>
    <string name="carrinho_item_removido">Item removido do pedido</string>
    <string name="carrinho_acompanhe_pedido">Últimos pedidos enviados</string>
    <string name="detalhes_pedido_enviado">Os itens foram salvos! Acesse o item de carrinho para mais detalhes ou para confirmar o envio do pedido</string>

</resources>
