<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DetalhesActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detalhes_imagem"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/detalhes_divider"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_imagem" />

        <TextView
            android:id="@+id/detalhes_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_divider" />

        <TextView
            android:id="@+id/detalhes_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_titulo" />

        <TextView
            android:id="@+id/detalhes_preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_descricao"
            tools:text="@string/preco" />

        <Button
            android:id="@+id/detalhes_quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quantidade"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_preco" />

        <Button
            android:id="@+id/detalhes_btn_observacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/observacoes"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_quantidade" />

        <Button
            android:id="@+id/detalhes_btn_adicionar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/adicionar_ao_pedido"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/detalhes_imagem"
            app:layout_constraintStart_toStartOf="@+id/detalhes_imagem"
            app:layout_constraintTop_toBottomOf="@+id/detalhes_btn_observacoes"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>